[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/Game.gd" type="Script" id=1]
[ext_resource path="res://Scenes/DeepgramIntegration/DeepgramInstance.tscn" type="PackedScene" id=2]

[sub_resource type="AudioStreamGenerator" id=1]

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="DeepgramInstance" parent="." instance=ExtResource( 2 )]

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = SubResource( 1 )

[connection signal="binary_packet_received" from="DeepgramInstance" to="." method="_on_DeepgramInstance_binary_packet_received"]
[connection signal="call_id_received" from="DeepgramInstance" to="." method="_on_DeepgramInstance_call_id_received"]
[connection signal="message_received" from="DeepgramInstance" to="." method="_on_DeepgramInstance_message_received"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
